--- a/gameTrivia/src/app/pages/challengers-game/challengers-game.component.html
+++ b/gameTrivia/src/app/pages/challengers-game/challengers-game.component.html
@@ -2,6 +2,9 @@
  --><!-- BOTONES EN FORMA SENOSOIDAL
  -->
 
+
+
+
 <div class="card flex flex-wrap justify-content-center gap-2">
   <p-sidebar
     [(visible)]="sidebarVisible4"
@@ -195,7 +198,9 @@
 </div>
 
 <!-- FONDO DEL JUEGO-->
-<body
+
+<!-- <div   style="overflow: hidden" #pixiContainer></div>
+ --><body
   id="main-body"
   class="sinusoidal-container"
   id="sinusoidal-container"
@@ -233,7 +238,6 @@
         </div>
       </div>
     </div>
-    <!-- PEQUENOS RECURSOS 1 -->
     <div
       class="container-fluid overlay-container"
       style="position: absolute; z-index: 2; top: 0"
@@ -281,7 +285,6 @@
       </div>
     </div>
 
-    <!-- PEQUENOS RECURSOS 2 -->
     <div
       class="container-fluid overlay-container"
       style="position: absolute; z-index: 3; top: 0"
@@ -333,7 +336,6 @@
       </div>
     </div>
 
-    <!-- ARBOLES RECURSOS 1 -->
     <div
       class="container-fluid overlay-container"
       style="position: absolute; z-index: 1; top: 0"
@@ -391,7 +393,6 @@
       </div>
     </div>
 
-    <!-- ARBOLES RECURSOS 2 -->
     <div
       class="container-fluid overlay-container"
       style="position: absolute; z-index: 1; top: 0"
@@ -446,7 +447,6 @@
       </div>
     </div>
 
-    <!-- BOTONES -->
 
     <div class="container z-index: 5;">
       <div class="row justify-content-center text-center">
@@ -502,28 +502,6 @@
           />
         </div>
       </div>
-    </div>
-
-    <!--    <div class="container-fluid ">
-      <div *ngFor="let boton of botones" >
-        <ng-container *ngIf="boton.tipo === 'boton'">
-          <button class="sinusoidal-button"         
-              [style.left.px]="boton.x"
-              [style.top.px]="boton.y"             
-              id="boton-{{ boton.id }}">
-              <div class="containerImg">
-                <img [src]="boton.svg" alt="Botón">
-              <span class="numero">{{ boton.id }}</span>  
-              </div>  
-           </button>  
-        </ng-container>
-  
-        <ng-container *ngIf="boton.tipo === 'imagen'">
-          <img [src]="boton.rutaImagen" alt="Imagen Adicional" [style.left.px]="boton.x" [style.top.px]="boton.y" style="height: 100px; position: relative;" [style.height.px]="(boton.tipo === 'imagen' && boton.id === 'imagen-FINAL') ? 270 : 150"
-          >  
-        </ng-container>            
-              
-      </div>      
-  </div>  -->
+    </div>    
   </div>
-</body>
+</body> 
