--- a/gameTrivia/src/app/pages/challengers-game/challengers-game.component.html
+++ b/gameTrivia/src/app/pages/challengers-game/challengers-game.component.html
@@ -198,12 +198,16 @@
 </div>
 
 <!-- FONDO DEL JUEGO-->
+<body id="game-container"  class="game-container" >
+  <div  style="overflow: hidden" #pixiContainer></div>
+  
+</body>
+ 
 
-<!-- <div   style="overflow: hidden" #pixiContainer></div>
- --><body
+<!--  <body
   id="main-body"
-  class="sinusoidal-container"
-  id="sinusoidal-container"
+  class="game-container"
+  id="game-container"
   style="overflow: hidden"
 >
   <div
@@ -504,4 +508,4 @@
       </div>
     </div>    
   </div>
-</body> 
+</body>  -->
