--- a/gameTrivia/src/app/pages/admin/admin.component.html
+++ b/gameTrivia/src/app/pages/admin/admin.component.html
@@ -55,9 +55,9 @@
                     >
                       <img
                         class="ps-3 pe-2"
-                        src="assets/Imagenes Juego/sala.png"
+                        src="assets/Imagenes Empresa/Sala.png"
                         alt="imgSala"
-                        style="height: 30px; width: auto"
+                        style="height: 60px; width: auto"
                       />
                       Salas
                     </a>
@@ -70,9 +70,9 @@
                     >
                       <img
                         class="ps-3 pe-2"
-                        src="assets/Imagenes Juego/usuario.png"
-                        alt="imgSala"
-                        style="height: 30px; width: auto"
+                        src="assets/Imagenes Empresa/Usuarios.png"
+                        alt="imgUsuario"
+                        style="height: 60px; width: auto"
                       />
                       Usuarios
                     </a>
@@ -89,9 +89,9 @@
                     >
                       <img
                         class="ps-3 pe-2"
-                        src="assets/Imagenes Juego/reporte.png"
+                        src="assets/Imagenes Empresa/Reporte.png"
                         alt="imgSala2"
-                        style="height: 30px; width: auto"
+                        style="height: 60px; width: auto"
                       />
                       Reporte Salas
                     </a>
@@ -104,8 +104,8 @@
                     >
                       <img
                         class="ps-3 pe-2"
-                        src="assets/Imagenes Juego/salir.png"
-                        style="height: 30px; width: auto"
+                        src="assets/Imagenes Empresa/Salir.png"
+                        style="height: 60px; width: auto"
                       />
                       Salir
                     </a>
