--- a/gameTrivia/src/app/pages/gestionar-usuarios/gestionar-usuarios.component.html
+++ b/gameTrivia/src/app/pages/gestionar-usuarios/gestionar-usuarios.component.html
@@ -56,9 +56,9 @@
                     >
                       <img
                         class="ps-3 pe-2"
-                        src="assets/Imagenes Juego/sala.png"
+                        src="assets/Imagenes Empresa/Sala.png"
                         alt="imgSala"
-                        style="height: 30px; width: auto"
+                        style="height: 60px; width: auto"
                       />
                       Salas
                     </a>
@@ -71,9 +71,9 @@
                     >
                       <img
                         class="ps-3 pe-2"
-                        src="assets/Imagenes Juego/usuario.png"
+                        src="assets/Imagenes Empresa/Usuarios.png"
                         alt="imgSala"
-                        style="height: 30px; width: auto"
+                        style="height: 60px; width: auto"
                       />
                       Usuarios
                     </a>
@@ -90,9 +90,9 @@
                     >
                       <img
                         class="ps-3 pe-2"
-                        src="assets/Imagenes Juego/reporte.png"
+                        src="assets/Imagenes Empresa/Reporte.png"
                         alt="imgSala2"
-                        style="height: 30px; width: auto"
+                        style="height: 60px; width: auto"
                       />
                       Reporte Salas
                     </a>
@@ -105,8 +105,8 @@
                     >
                       <img
                         class="ps-3 pe-2"
-                        src="assets/Imagenes Juego/salir.png"
-                        style="height: 30px; width: auto"
+                        src="assets/Imagenes Empresa/Salir.png"
+                        style="height: 60px; width: auto"
                       />
                       Salir
                     </a>
