--- a/gameTrivia/src/app/components/ventana-registro/ventana-registro.component.html
+++ b/gameTrivia/src/app/components/ventana-registro/ventana-registro.component.html
@@ -64,6 +64,7 @@
                   placeholder="Ingresa tu correo electrónico *"
                   name="mailUsuario"
                   maxlength="50"
+                  required
                 />
 
                 <small
@@ -83,9 +84,8 @@
                     type="text"
                     class="form-control"
                     id="phone"
-                    placeholder="Ingresa tu número de teléfono celular*"
+                    placeholder="Ingresa tu número de teléfono celular"
                     name="phoneUsuario"
-                    required
                   />
                 </div>
 
