--- a/gameTrivia/src/app/components/ventana-registro/ventana-registro.component.html
+++ b/gameTrivia/src/app/components/ventana-registro/ventana-registro.component.html
@@ -84,7 +84,9 @@
                     type="text"
                     class="form-control"
                     id="phone"
-                    placeholder="Ingresa tu número de teléfono celular"
+                    pattern="[0-9]{10}"
+                    placeholder="Ingresa tu número de teléfono celular (Ej: 09XXXXXXXX)"
+                    title="Ingrese un número de celular válido (10 dígitos)"                    
                     name="phoneUsuario"
                   />
                 </div>
