--- a/gameTrivia/src/app/components/ranking-challenger/ranking-challenger.component.html
+++ b/gameTrivia/src/app/components/ranking-challenger/ranking-challenger.component.html
@@ -157,7 +157,7 @@
             
               <div class="py-3">
                 <strong>
-                  <p my-2>
+                  <p my-2 style="font-size: 24px;">
                     ¿Disfrutaste la experiencia? 
                   </p>
                   <p class="my-1">
