Modificaciones juego y crear sala

--- a/gameTrivia/src/app/components/ranking-challenger/ranking-challenger.component.html
+++ b/gameTrivia/src/app/components/ranking-challenger/ranking-challenger.component.html
@@ -33,9 +33,9 @@
         </div>
       </div>
 
-      <div class="row">
+      <div class="row px-2">
         <div
-          class="col container-ranking mx-2 px-3 py-4"
+          class="col container-ranking px-3 py-4"
           style="background-color: var(--color-primario)"
         >
 
@@ -156,12 +156,12 @@
             <div class="card py-3" style="text-align: center; background-color: var(--color-primario); color: var(--color-texto2);">
             
               <div class="py-3">
-                <strong>
-                  <p my-2 style="font-size: 24px;">
+                <strong style="color: var(--color-texto1);">
+                  <p class="m-2 " style="font-size: 24px;">
                     ¿Disfrutaste la experiencia? 
                   </p>
-                  <p class="my-1">
-                     Contáctanos para seguir brindándote lo mejor.
+                  <p class="my-1 mx-2">
+                    Contáctanos y haremos algo increíble para ti.
                   </p>
 
                 </strong>
