--- a/gameTrivia/src/app/pages/challengers-game/challengers-game.component.scss
+++ b/gameTrivia/src/app/pages/challengers-game/challengers-game.component.scss
@@ -3,7 +3,7 @@
   
 /*   background-image: url('../../../assets/Imagenes Juego/PatronVerde.png');
  */  
- background: linear-gradient(0deg,#3671D1,#00002A);
+//  background: linear-gradient(0deg,#3671D1,#00002A);
   background-size: contain; /* el fondo se ajusta al contenedor*/
   background-position: center center;
   margin: 0;
