correccion de error al crear el complemento

--- a/gameTrivia/src/app/pages/crear-sala/crear-sala.component.html
+++ b/gameTrivia/src/app/pages/crear-sala/crear-sala.component.html
@@ -61,9 +61,8 @@
       <div>
         <!-- Mensaje error -->
         <div
-          class="mb-3 px-md-5 text-center"
+          class="mb-3 px-md-5 text-center text-dark fw-bold fs-5 text"
           *ngIf="existeError === true"
-          style="color: rgb(0, 0, 0)"
         >
           {{ result }}
         </div>
