--- a/gameTrivia/src/app/pages/crear-sala/crear-sala.component.html
+++ b/gameTrivia/src/app/pages/crear-sala/crear-sala.component.html
@@ -426,6 +426,7 @@
                           id="flexSwitchCheckDefault"
                           [(ngModel)]="checkedDecoracion"
                           (change)="onSwitchChange($event)"
+                          name="checked1"
                           checked
                         />
                         <label
@@ -565,6 +566,7 @@
                           id="flexSwitchCheckDefault"
                           [(ngModel)]="checkedDecoracion2"
                           (change)="onSwitchChange2($event)"
+                          name="checked2"
                           checked
                         />
                         <label
@@ -648,6 +650,7 @@
                           id="flexSwitchCheckDefault"
                           [(ngModel)]="checkedDecoracion3"
                           (change)="onSwitchChange3($event)"
+                          name="checked3"
                           checked
                         />
                         <label
@@ -818,6 +821,7 @@
                           id="flexSwitchCheckDefault"
                           [(ngModel)]="checkedDecoracion4"
                           (change)="onSwitchChange4($event)"
+                          name="checked4"
                           checked
                         />
                         <label
