--- a/gameTrivia/src/app/pages/crear-sala/crear-sala.component.css
+++ b/gameTrivia/src/app/pages/crear-sala/crear-sala.component.css
@@ -141,3 +141,33 @@ body {
   font-size: smaller;
   cursor: pointer;
 }
+
+.calendario {
+  border-radius: 20px;
+  padding: 10px;
+  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.2);
+  border: none; 
+  outline: none; 
+}
+
+::ng-deep .p-button{  
+  background: var(--color-secundario);
+  border: none;
+  border-top-right-radius: 20px;
+  border-bottom-right-radius: 20px;
+}
+
+::ng-deep .p-inputtext {
+  border-radius: 20px;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+}
+::ng-deep .p-calendar {
+  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.2);
+  border-radius: 20px;
+}
+
+select {
+  border-radius: 25px;
+}
+
